[tool.poetry]
name = "modapp-cst"
version = "0.1.1"
description = ""
authors = ["Vladyslav Hnatiuk <vladyslav5@meta.ua>"]
readme = "README.md"
packages = [{include = "modapp_cst"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
